<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="jp.dosukoityanko.ui.viewmodel.restaurantList.RestaurantListViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom_sheet_contents"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_white_top_40"
        android:paddingStart="16dp"
        android:paddingTop="30dp"
        android:paddingEnd="16dp"
        android:paddingBottom="30dp"
        app:isVisibleBottomSheet="@{viewModel.bottomSheetState}">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/distance_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/distance"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <info.hoang8f.android.segmented.SegmentedGroup
            android:id="@+id/distance_segment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/distance_title"
            app:sc_checked_text_color="@color/white"
            app:sc_tint_color="@color/orange">

            <RadioButton
                android:id="@+id/a_kilo_meters"
                style="@style/RadioButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/orange"
                android:onClick="@{() -> viewModel.onOneKilometerChecked()}"
                android:text="@string/a_kilo_meters" />

            <RadioButton
                android:id="@+id/three_kilo_meters"
                style="@style/RadioButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/orange"
                android:onClick="@{() -> viewModel.onThreeKilometerChecked()}"
                android:text="@string/three_kilo_meters" />

            <RadioButton
                android:id="@+id/five_kilo_meters"
                style="@style/RadioButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/orange"
                android:onClick="@{() -> viewModel.onFiveKilometerChecked()}"
                android:text="@string/five_kilo_meters" />

        </info.hoang8f.android.segmented.SegmentedGroup>

        <TextView
            android:id="@+id/money_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/amount"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/distance_segment" />

        <info.hoang8f.android.segmented.SegmentedGroup
            android:id="@+id/money_segment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/money_title"
            app:sc_checked_text_color="@color/white"
            app:sc_tint_color="@color/orange">

            <RadioButton
                android:id="@+id/three_thousand_yen"
                style="@style/RadioButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/orange"
                android:onClick="@{() -> viewModel.onThreeThousandChecked()}"
                android:padding="10dp"
                android:text="@string/three_thousand_yen" />

            <RadioButton
                android:id="@+id/five_thousand_yen"
                style="@style/RadioButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/orange"
                android:onClick="@{() -> viewModel.onFiveThousandChecked()}"
                android:padding="10dp"
                android:text="@string/five_thousand_yen" />

        </info.hoang8f.android.segmented.SegmentedGroup>

        <Button
            android:id="@+id/search_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/background_orange_40"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/search"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/money_segment" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/background_white_40"
            android:onClick="@{() -> viewModel.onCancelButtonClick()}"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/cancel"
            android:textColor="@color/orange"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/search_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>